--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <body>
-<script src="bundle.js"></script>
+<iframe width="300" src="./left.html"></iframe>
+<iframe width="300" src="./right.html"></iframe>
 </body>
 </html>
